[gd_scene load_steps=19 format=3 uid="uid://downv7grip0yk"]

[ext_resource type="Script" uid="uid://cci81of4pjdwv" path="res://Towers/archer_tower.gd" id="1_8aiwx"]
[ext_resource type="Resource" uid="uid://cadpa641en0h4" path="res://resources/towers/test_tower_resource.tres" id="2_77yxy"]
[ext_resource type="Shader" uid="uid://chudojcwfpmos" path="res://resources/shaders/cool shader.gdshader" id="2_pb4we"]
[ext_resource type="Script" uid="uid://bwatls00pqq80" path="res://components/sight_component.gd" id="3_pb4we"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xjle4"]
shader = ExtResource("2_pb4we")
shader_parameter/use_sprite_alpha = true
shader_parameter/use_transition_texture = false
shader_parameter/transition_type = 2
shader_parameter/position = Vector2(0.5, 0.5)
shader_parameter/invert = true
shader_parameter/grid_size = Vector2(1, 1)
shader_parameter/rotation_angle = 0.0
shader_parameter/stagger = Vector2(0, 0)
shader_parameter/stagger_frequency = Vector2i(2, 2)
shader_parameter/flip_frequency = Vector2i(1, 1)
shader_parameter/basic_feather = 0.0
shader_parameter/use_mask_size = false
shader_parameter/mask_size = Vector2(100, 100)
shader_parameter/edges = 3
shader_parameter/shape_feather = 0.0
shader_parameter/sectors = 1
shader_parameter/clock_feather = 0.0
shader_parameter/progress = 0.8
shader_parameter/progress_bias = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_oxt30"]
offsets = PackedFloat32Array(0.974026, 1)
colors = PackedColorArray(0.0833333, 1, 0, 1, 0.0833333, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vat4d"]
gradient = SubResource("Gradient_oxt30")

[sub_resource type="Gradient" id="Gradient_vat4d"]
offsets = PackedFloat32Array(0.961039)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pb4we"]
gradient = SubResource("Gradient_vat4d")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_77yxy"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_oxt30"]
gradient = SubResource("Gradient_77yxy")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_26jbd"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.0383972, 0.0383972, 0.0383971, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_77yxy"]
gradient = SubResource("Gradient_26jbd")
width = 16
height = 16

[sub_resource type="Gradient" id="Gradient_bky7u"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.306923, 0.306923, 0.306922, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bky7u"]
gradient = SubResource("Gradient_bky7u")
width = 16
height = 16

[sub_resource type="CircleShape2D" id="CircleShape2D_pb4we"]
radius = 120.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oxt30"]
shader = ExtResource("2_pb4we")
shader_parameter/use_sprite_alpha = true
shader_parameter/use_transition_texture = false
shader_parameter/transition_type = 2
shader_parameter/position = Vector2(0.5, 0.5)
shader_parameter/invert = true
shader_parameter/grid_size = Vector2(1, 1)
shader_parameter/rotation_angle = 0.0
shader_parameter/stagger = Vector2(0, 0)
shader_parameter/stagger_frequency = Vector2i(2, 2)
shader_parameter/flip_frequency = Vector2i(1, 1)
shader_parameter/basic_feather = 0.0
shader_parameter/use_mask_size = false
shader_parameter/mask_size = Vector2(100, 100)
shader_parameter/edges = 30
shader_parameter/shape_feather = 0.0
shader_parameter/sectors = 1
shader_parameter/clock_feather = 0.0
shader_parameter/progress = 1.0
shader_parameter/progress_bias = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vat4d"]
bg_color = Color(0.52, 0.52, 0.52, 0.415686)

[node name="archerTower" type="Node2D" node_paths=PackedStringArray("sightComp")]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_8aiwx")
stats = ExtResource("2_77yxy")
sightComp = NodePath("SightComponent")

[node name="baseTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_xjle4")
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_vat4d")
metadata/_edit_group_ = true

[node name="outline" type="TextureRect" parent="baseTexture"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
material = SubResource("ShaderMaterial_xjle4")
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(32, 32)
texture = SubResource("GradientTexture2D_pb4we")

[node name="click" type="TextureButton" parent="baseTexture"]
material = SubResource("ShaderMaterial_xjle4")
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 44.0
scale = Vector2(2, 2)
pivot_offset = Vector2(12, 12)
texture_normal = SubResource("GradientTexture2D_oxt30")
texture_pressed = SubResource("GradientTexture2D_77yxy")
texture_hover = SubResource("GradientTexture2D_bky7u")
stretch_mode = 3

[node name="SightComponent" type="Area2D" parent="."]
scale = Vector2(3, 3)
script = ExtResource("3_pb4we")
canLeave = true
metadata/_custom_type_script = "uid://bwatls00pqq80"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightComponent"]
shape = SubResource("CircleShape2D_pb4we")
debug_color = Color(0, 0.595, 0.7, 0)
metadata/_edit_lock_ = true

[node name="range" type="Panel" parent="SightComponent"]
visible = false
material = SubResource("ShaderMaterial_oxt30")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = -80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
theme_override_styles/panel = SubResource("StyleBoxFlat_vat4d")

[node name="coolDown" type="Timer" parent="."]
one_shot = true
